--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,8 @@
   .header {
     padding: 80px;
     text-align: center;
-    background: #1abc9c;
-    color: white;
+    background: #095700;
+    color: rgb(0, 0, 0);
   }
   
   /* Increase the font size of the heading */
